package ParkingLot.Version3.dto.Account;

public abstract class Account {
    private String name;
    private String email;
    private String password;

//    public Account(String name, String email, String password) {
//        this.name = name;
//        this.email = email;
//        this.password = password;
//    }
}
