package ParkingLot.Version3.dto.Account;

public class ParkingAttendant extends Account {
}
