package ParkingLot.Version3.paymentMethods;

public abstract class PaymentMethod {
    public abstract boolean initiatePayment(int amount);
}
